chore: finish functionality